examples/test/testpolicy17159.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17159
  namespace: namespace401
spec:
  podSelector:
    matchLabels:
      key13: value20
      key26: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value30
          key9: value40
          key10: value5
      podSelector:
        matchLabels:
          key19: value32
          key10: value10
          key26: value7
